--- a/styles/style.css
+++ b/styles/style.css
@@ -946,6 +946,9 @@ body {
     line-height: 1.3;
     color: var(--h5-color);
   }
+  h6 {
+    font-size: 1.3rem;
+  }
   .home-blurb {
     width: 90%;
     padding-top: 3rem;
@@ -1041,6 +1044,9 @@ body {
     justify-content: center;
     padding: 0rem 0rem 3rem;
   }
+  .project-image {
+    padding: 0rem 1.5rem 2rem;
+  }
   .about-desc {
     font-size: 1rem;
   }
@@ -1067,6 +1073,18 @@ body {
   .about-item-3 {
     width: 90%;
     justify-self: center;
+  }
+  .caption {
+    font-size: 1rem;
+    margin-bottom: 0rem;
+    padding: 0rem 1rem 0rem;
+  }
+  .project-image-mult {
+    flex-direction: column;
+    padding: 0rem 0rem 1rem;
+  }
+  .arrow {
+    padding-right: 1rem;
   }
 }
 
@@ -1115,7 +1133,7 @@ body {
   }
 
   .project-description {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
   .project-title {
     font-size: 1.5rem;
