fixed the mult div

--- a/styles/style.css
+++ b/styles/style.css
@@ -522,6 +522,10 @@ body {
   padding: 3rem 3rem 1rem 3rem;
   width: 50%;
 }
+.header-mult {
+  padding: 3rem 3rem 1rem 3rem;
+  width: 50%;
+}
 
 .work-wrapper {
   flex: 1;
@@ -1038,6 +1042,16 @@ body {
     color: var(--project-sidebar-text-color);
     background: var(--project-sidebar-background-color);
   }
+  .header-mult {
+    width: 100%;
+    top: 5vh;
+    padding-right: 2rem;
+    padding: 0.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--project-sidebar-text-color);
+    background: var(--project-sidebar-background-color);
+  }
 
   .project-description {
     font-size: 1rem;
@@ -1429,12 +1443,30 @@ body {
     color: var(--project-sidebar-text-color);
     background: var(--project-sidebar-background-color);
   }
+  .project-image-mult {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0rem 3rem 2rem;
+  }
 
   .header {
     width: 80%;
     top: 5vh;
     padding-right: 2rem;
     padding: 0.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--project-sidebar-text-color);
+    background: var(--project-sidebar-background-color);
+  }
+  .header-mult {
+    width: 90%;
+    top: 5vh;
+
+    padding: 0.5rem 1rem;
     display: flex;
     flex-direction: column;
     color: var(--project-sidebar-text-color);
@@ -1542,6 +1574,17 @@ body {
     color: var(--project-sidebar-text-color);
     background: var(--project-sidebar-background-color);
   }
+  .header-mult {
+    width: 90%;
+    top: 5vh;
+    padding-right: 2rem;
+    padding: 0.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--project-sidebar-text-color);
+    background: var(--project-sidebar-background-color);
+  }
+
   .project-description {
     font-size: 1.1rem;
   }
