--- a/styles/style.css
+++ b/styles/style.css
@@ -1252,6 +1252,11 @@ body {
     font-size: 2rem;
   }
 
+  .svg-box svg {
+    width: 100%;
+    height: 100%;
+  }
+
   .illustration-overlay {
     position: absolute;
     top: 0;
